# CrewAi-Mini

./: README.md
my_project/: pyproject.toml
my_project/src/my_project/: main.py
