[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "my_project using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
my_project = "my_project.main:run"
train = "my_project.main:train"
replay = "my_project.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
